# lfm2-private-vision

./: CLAUDE.md  LICENSE  README.md  install.sh  start.sh  start_server.py
backend/: README.md  index.html  main.py  pyproject.toml  run.py
frontend/: index.html
